--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ project(ImageStitching VERSION 0.1.0)
 
 message("Project Name: " ${PROJECT_NAME})
 # 设置C/C++标准
-# 设置编译选项
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 # set(CMAKE_CXX_STANDARA 17)
+# 设置编译选项
 # set(CMAKE_C_COMPILER "gcc")
 # set(CMAKE_CXX_COMPILE_FEATURES "g++")
 
@@ -23,6 +23,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 # else()
 #   message(STATUS "other platform!")
 # endif(CMAKE_SYSTEM_NAME MATCHES "Linux")
+set(CMAKE_BUILD_TYPE Release)
 if(CMAKE_SYSTEM_NAME MATCHES "Linux")
 	message(STATUS "Linux platorm!")
 elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
@@ -51,13 +52,12 @@ elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
 		elseif (CMAKE_BUILD_TYPE MATCHES "Release")
     		message(STATUS "CMAKE_BUILD_TYPE is Release")
 			# 设置 可执行程序输出目录
-			set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/releaseX64)
+			# set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/releaseX64)
 			# 设置库文件输出目录
-			set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/releaseX64)
+			# set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/releaseX64)
 			set(LINK_CV_LIBS opencv_highgui2413 opencv_core2413 opencv_features2d2413 opencv_nonfree2413 opencv_legacy2413  opencv_flann2413 opencv_imgproc2413 opencv_calib3d2413)
 		endif(CMAKE_BUILD_TYPE MATCHES "Debug" OR CMAKE_BUILD_TYPE EQUAL "None" OR NOT CMAKE_BUILD_TYPE)
 		set(PROJECT_NAME ${PROJECT_NAME}_64)
-
 	else()
 		# 32位
 		message(STATUS "Windows Win32 platform!")
@@ -82,7 +82,6 @@ elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
 			# set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/debugX86)
 			# 设置库文件输出目录
 			# set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/debugX86)
-
 			set(LINK_CV_LIBS opencv_highgui2413d opencv_core2413d opencv_features2d2413d opencv_nonfree2413d opencv_legacy2413d  opencv_flann2413d opencv_imgproc2413d opencv_calib3d2413d)
 		elseif (CMAKE_BUILD_TYPE MATCHES "Release")
 			message(STATUS "CMAKE_BUILD_TYPE is Release")
@@ -105,8 +104,6 @@ set(CMAKE_C_FLAGS "-g -Wall")
 # 添加头文件路径
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
-
-
 # 添加库文件路径
 # link_directories(${PROJECT_SOURCE_DIR}/3dparty/opencv2/lib)
 LINK_DIRECTORIES(${LINK_DIRECTORIES})
@@ -118,12 +115,10 @@ FILE(GLOB_RECURSE Cpp_files ${PROJECT_SOURCE_DIR}/src/*.cpp)
 add_executable(${PROJECT_NAME} ${Cpp_files})
 
 # target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/3rdparty/opencv2/lib)
-
 # target_link_libraries(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/3rdparty/opencv2/lib/opencv_highgui2413d.lib ${PROJECT_SOURCE_DIR}/3rdparty/opencv2/lib/opencv_core2413d.lib)
-
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC ${LINK_CV_LIBS})
 
-# 复制目录下的全部内容
+# 复制目录下的全部动态库文件
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
         "${PROJECT_DLL_Dir}"
