--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,9 @@ if (CMAKE_SYSTEM_NAME MATCHES "Linux")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--whole-archive") 
 elseif(CMAKE_SYSTEM_NAME MATCHES "Windows")
     message(STATUS "Windows platorm!")
-	# SET(CMAKE_CXX_COMPILER "D:/MinGW64/bin/g++") 
-	set(CMAKE_CXX_COMPILER "Visual Studio 14 2015")
+	SET(CMAKE_CXX_COMPILER "D:/Msys2/mingw64/bin/g++") 
+	SET(CMAKE_C_COMPILER "D:/Msys2/mingw64/bin/gcc") 
+	# set(CMAKE_CXX_COMPILER "Visual Studio 14 2015")
 	# set(CMAKE_CXX_COMPILER "Visual Studio 15 2017")
 	# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /WHOLEARCHIVE")
 	# 设置MT/MTD
